# AwsTestService

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  conanfile.py  gcovr.cfg  main.tf  meson.build  sonar-project.properties
.github/actions/setup/: action.yml
.github/workflows/: default.yml
apps/: meson.build
apps/awesome-app/: main.cpp  meson.build
docs/: Doxyfile  doxygen-awesome-darkmode-toggle.js  doxygen-awesome.css
include/: meson.build
include/cpp-template/: cpp_template.hpp
src/: cpp_template.cpp  meson.build
tests/: cpp_template_test.cpp  main.cpp  meson.build
